kubernetes/vscan-agent-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: vscan-agent
  name: vscan-agent
  namespace: vscan
spec:
  replicas: 5
  selector:
    matchLabels:
      app: vscan-agent
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: vscan-agent
    spec:
      containers:
      - image: tatacomm/vscan-agent:beta
        name: vscan-agent
        stdin: true 
        tty: true
        livenessProbe:
          tcpSocket:
            port: 50051
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 1
        readinessProbe:
          tcpSocket:
            port: 50051
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 1
        ports:
        - containerPort: 50051
        resources:
          limits:
            cpu: "4"
            memory: 2Gi
          requests:
            cpu: "2"
            memory: 2Gi
      imagePullSecrets:
        - name: docker-secret
status: {}
