kubernetes/vscan-cache-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    run: vscan-cache
  name: vscan-cache
  namespace: vscan
spec:
  replicas: 1
  selector:
    matchLabels:
      run: vscan-cache
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: vscan-cache
    spec:
      containers:
        - image: tatacomm/vscan-cache:beta
          name: vscan-cache
          ports:
            - containerPort: 6379
          resources: {}
status: {}
