kubernetes/vscan-controller-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: vscan-controller
  name: vscan-controller
  namespace: vscan
spec:
  replicas: 3
  selector:
    matchLabels:
      app: vscan-controller
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: vscan-controller
    spec:
      containers:
        - image: tatacomm/vscan-controller:beta
          imagePullPolicy: Always
          name: vscan-controller
          stdin: true 
          tty: true
          livenessProbe:
            httpGet:
              path: /api/v1/ping
              port: 8443
              scheme: HTTPS
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /api/v1/ping
              port: 8443
              scheme: HTTPS
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 1
          ports:
            - containerPort: 8443
          resources:
            limits:
              cpu: 400m
              memory: 512Mi
            requests:
              cpu: 200m
              memory: 256Mi
      imagePullSecrets:
        - name: docker-secret
status: {}
