kubernetes/vscan-cache-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: vscan-cache
  name: vscan-cache
  namespace: vscan
spec:
  ports:
    - port: 6379
      protocol: TCP
      targetPort: 6379
  selector:
    run: vscan-cache
  type: ClusterIP
status:
  loadBalancer: {}
