kubernetes/vscan-controller-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: vscan-controller
  name: vscan-controller
  namespace: vscan
spec:
  ports:
    - port: 443
      protocol: TCP
      targetPort: 443
  selector:
    app: vscan-controller
  type: ClusterIP
status:
  loadBalancer: {}
