kubernetes/vscan-ui-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: vscan-ui
  name: vscan-ui
  namespace: vscan
spec:
  ports:
    - port: 9443
      nodePort: 31443
      protocol: TCP
      targetPort: 443
  selector:
    app: vscan-ui
  type: NodePort
status:
  loadBalancer: {}
